z-index added to header fixed bar.

--- a/index.css
+++ b/index.css
@@ -11,6 +11,7 @@ background-color: black;
 .header{
 padding-top: 2vw;
 padding-bottom: 1vw;
+z-index: 10;
 width: 100%;
 height: 10vw;
 display: flex;
